src/exporter/snapshots/annatto__exporter__sequence__tests__horizontal.snap
---
source: src/exporter/sequence.rs
expression: estr.unwrap()
---
They buy and sell books .
I have no clue .
