src/exporter/snapshots/annatto__exporter__sequence__tests__serialize.snap
---
source: src/exporter/sequence.rs
expression: serialization.unwrap()
---
delimiter = """

"""
fileby = "annis::doc"
group_component_type = "Coverage"
anno = "annis::tok"

[component]
ctype = "Ordering"
layer = "annis"
name = ""
