src/exporter/snapshots/annatto__exporter__sequence__tests__serialize_custom.snap
---
source: src/exporter/sequence.rs
expression: serialization.unwrap()
---
delimiter = " "
fileby = "org::file_data"
groupby = "dipl::sentence"
group_component_type = "Coverage"
anno = "norm::norm"

[component]
ctype = "Coverage"
layer = "annis"
name = ""
