src/exporter/snapshots/annatto__exporter__sequence__tests__vertical.snap
---
source: src/exporter/sequence.rs
expression: estr.unwrap()
---
They
buy
and
sell
books
.

I
have
no
clue
.


