src/exporter/snapshots/annatto__exporter__sequence__tests__with_virtual_tokens.snap
---
source: src/exporter/sequence.rs
expression: estr.unwrap()
---
---- test_file.txt:
I am
in New York


